--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -1,8 +1,12 @@
+@import 'nav';
+
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 body {
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(90%, #B3B0AB), to(#8C8A86));
     background-image: linear-gradient(to right, #B3B0AB 90%, #8C8A86);
     font-family: 'Cairo', sans-serif;
     color: #000;
@@ -52,7 +56,16 @@ a {
         "copy calendar"
         "copy info";
     justify-items: start;
-    align-items: start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    
+    section {
+        justify-self: stretch;
+        -ms-flex-item-align: stretch;
+            align-self: stretch;
+        // border: solid 1px pink;
+    }
 }
 
 .social-links {
@@ -64,11 +77,6 @@ a {
     top: 25px;
 }
 
-.grid-home > section {
-    justify-self: stretch;
-    align-self: stretch;
-    /* border: solid 1px pink; */
-}
 
 /* ===== HEADER SECTION ===== */
 
@@ -82,89 +90,6 @@ a {
     left: -40px;
 
 }
-
-/* ===== HEADER NAV ===== */
-
-.header_nav-logo-container {
-    width: calc(100% - 40px);
-    padding: 5px 0 10px 10px;
-    position: absolute;
-    left: 40px;
-    background-image: -webkit-gradient(linear, left top, right top, color-stop(45%, #1B1F26), to(rgba(0, 0, 0, 0)));
-    background-image: linear-gradient(to right, #1B1F26 45%, rgba(0, 0, 0, 0));
-    // border: solid 1px red;
-}
-
-.header_logo {
-    width: 200px;
-    height: auto;
-    margin-right: 20px;
-}
-
-.header_nav {
-    display: inline-block;
-    position: relative;
-    bottom: 25px;
-    height: 25px;
-    margin-top: 30px;
-    margin-right: 50px;
-    font-size: 16px;
-    font-weight: 600;
-}
-
-.header_nav_menu-item {
-    position: relative;
-}
-
-.header_nav div {
-    display: inline-block;
-}
-
-.header_nav_divider {
-    margin: 0 2px -12px 2px;
-    width: 18px;
-    height: 32px;
-}
-
-.header_nav_triangle {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 8.7px 5px 0 5px;
-    border-color: #fff transparent transparent transparent;
-    /* border-color: #E6AC5C transparent transparent transparent; */
-    margin: 0 0 2px 10px;
-}
-
-
-/* ===== SUB-NAV ===== */
-
-.nav_subnav {
-    /* visibility: hidden; */
-    opacity: 1;
-    position: absolute;
-    top: 25px;
-    /* left: -25px; */
-    right: 0;
-}
-
-/* .nav_subnav:hover {
-    opacity: 1;
-} */
-
-.subnav_menu-item {
-    display: block;
-    height: 30px;
-    width: 130px;
-    text-transform: capitalize;
-    font-weight: 400;
-    text-align: left;
-    background: rgba(111,111,118,0.7);
-    margin: 1px 0;
-    padding: 4px 0 0 8px;
-}
-
-/* ===== HEADER ===== */
 
 .header_image {
     width: calc(100% - 40px);
@@ -193,6 +118,7 @@ a {
     letter-spacing: 0.05em;
     color: #B3B3B3;
     padding: 9px 0 0 15px;
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(45%, #1B1F26), to(rgba(0, 0, 0, 0)));
     background-image: linear-gradient(to right, #1B1F26 45%, rgba(0, 0, 0, 0));
 }
 
@@ -236,6 +162,12 @@ a {
     border-bottom: solid 1px lightgrey
 }
 
+.preview_link-more {
+    float: right;
+    margin: 5px 10% 5px 0;
+    font-size: 14px;
+}
+
 .events_thumbnail {
     width: 30%;
     min-width: 75px;
@@ -264,6 +196,8 @@ a {
 .events_preview_address {
     margin: 5px 0;
 }
+
+
 
 
 /* ===== PRIMARY COPY SECTION ===== */
