--- a/assets/sass/nav.scss
+++ b/assets/sass/nav.scss
@@ -7,13 +7,13 @@
     left: 40px;
     background-image: -webkit-gradient(linear, left top, right top, color-stop(45%, #1B1F26), to(rgba(0, 0, 0, 0)));
     background-image: linear-gradient(to right, #1B1F26 45%, rgba(0, 0, 0, 0));
-    // border: solid 1px red;
 }
 
 .header_logo {
     width: 200px;
     height: auto;
     margin-right: 20px;
+
 }
 
 .header_nav {
@@ -31,6 +31,10 @@
     position: relative;
 }
 
+.header_nav_menu-item:hover {
+    color: #deab63;
+}
+
 .header_nav div {
     display: inline-block;
 }
@@ -45,28 +49,44 @@
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 8.7px 5px 0 5px;
-    border-color: #fff transparent transparent transparent;
-    /* border-color: #E6AC5C transparent transparent transparent; */
-    margin: 0 0 2px 10px;
+    border-width: 7px 4px 0 4px;
+    border-color: #aaa transparent transparent transparent;
+    margin: 0 0 3px 10px;
 }
 
 
 /* ===== SUB-NAV ===== */
 
 .nav_subnav {
+    opacity: 0;
     position: absolute;
-    // background: red;
-    background: rgba(111,111,118,0.7);
-    width: 120px;
-    top: 25px;
-    right: 0;
+    top: -5px;
+    padding-top: 30px;
+    right: -10px;
+    -webkit-transition: opacity 0.2s ease-in;
+    transition: opacity 0.2s ease-in;
+}
+
+.nav_subnav:hover {
+    opacity: 1;
 }
 
 .subnav_menu-item {
     display: block;
     height: 30px;
+    width: 130px;
     text-transform: capitalize;
-    margin: 3px 0;
-    padding-top: 4px;
+    font-size: 15px;
+    font-weight: 400;
+    text-align: left;
+    background: rgba(111,111,118,0.7);
+    margin: 1px 0;
+    padding: 6px 0 0 8px;
+    color: #fff;
+}
+
+.subnav_menu-item:hover {
+    background: rgba(70,70,85,0.9);
+    border-bottom: solid 2px #004B80;
+    color: #fab047;
 }
