--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,35 +1,18 @@
-<!DOCTYPE html>
-
-<html class="no-js">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Cairo:400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
+{{ partial "head" . }}
 
 <body>
     <div class="container-primary">
 
-        <div class="social-links">
-            <img>
-            <img>
-            <img>
-        </div>
+        {{ partial "social" . }}
+        
+        <div class="grid grid-home">
 
-        <div class="grid-home">
-
-            <header class="header-home">
+            <header class="header">
                 <div class="header_nav-logo-container"> <img class="header_logo" src="images/Laboratory-Logo-WHITE.png" alt="Laboratory text logo">
                     {{ partial "nav" . }}
                 </div>
 
-                <img class="header_image" src="images/FPO_preMADE_67inch_3to4.jpg">
+                <img class="header-home_image" src="images/FPO_preMADE_67inch_3to4.jpg">
                 <!-- <img class="header_image" src="images/FPO_superduluxe_3to4.jpg"> -->
                 <div class="triangle-punch-out"></div>
 
