--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,24 +1,24 @@
 <nav class="header_nav">
-    <img class="header_nav_divider" src="images/slash.svg">
+    <img class="header_nav_divider" src="/images/slash.svg">
     <div class="header_nav_menu-item">current
         <div class="header_nav_triangle"></div>
         <div class="nav_subnav">
-            <div class="subnav_menu-item">projects</div>
             <div class="subnav_menu-item">artists</div>
+            <div class="subnav_menu-item">projects</div>
         </div>
     </div>
 
-    <img class="header_nav_divider" src="images/slash.svg">
+    <img class="header_nav_divider" src="/images/slash.svg">
     <div class="header_nav_menu-item">past work
         <div class="header_nav_triangle"></div>
         <div class="nav_subnav">
-            <div class="subnav_menu-item">projects</div>
             <div class="subnav_menu-item">artists</div>
+            <div class="subnav_menu-item">projects</div>
             <div class="subnav_menu-item">videos</div>
         </div>
     </div>
 
-    <img class="header_nav_divider" src="images/slash.svg">
+    <img class="header_nav_divider" src="/images/slash.svg">
     <div class="header_nav_menu-item">support us
         <div class="header_nav_triangle"></div>
         <div class="nav_subnav">
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-    <img class="header_nav_divider" src="images/slash.svg">
+    <img class="header_nav_divider" src="/images/slash.svg">
     <div class="header_nav_menu-item">residency
         <div class="header_nav_triangle"></div>
         <div class="nav_subnav">
