--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,11 +6,27 @@
 
         {{ partial "social" . }}
 
+        <div class="grid grid-single">
 
-        
-        
-        {{ block "main" . }}
-		{{end}}
+            <header class="header">
+                <div class="header_nav-logo-container nav_pages"> <img class="header_logo" src="/images/Laboratory-Logo-WHITE.png"
+                        alt="Laboratory text logo">
+                    {{ partial "nav" . }}
+                </div>
+
+            </header>
+
+            
+            <div class="header_image-holder {{ if .Params.type }}{{.Params.type}}{{end}}">
+                <footer>
+                    <div class="tagline">interactive, digital, performance art</div>
+                </footer>
+            </div>
+            <div class="triangle-punch-out tpo_pages"></div>
+
+
+            {{ block "main" . }}
+            {{end}}
 
         </div>
 
