--- a/layouts/partials/calendar.html
+++ b/layouts/partials/calendar.html
@@ -1,6 +1,6 @@
 <div class="event-calendar">
 
-<div class="calendar_month">august 2018</div>
+<div class="calendar_month">{{dateFormat "January 2006" now}}</div>
 
 <table>
     <tr>
@@ -59,5 +59,7 @@
     </tr>
 
 </table>
+
+
 
 </div>
