--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,8 +9,8 @@
         <div class="grid grid-single">
 
             <header class="header">
-                <div class="header_nav-logo-container nav_pages"> <img class="header_logo" src="/images/Laboratory-Logo-WHITE.png"
-                        alt="Laboratory text logo">
+                <div class="header_nav-logo-container nav_pages"><a href="/"><img class="header_logo" src="/images/Laboratory-Logo-WHITE.png"
+                        alt="Laboratory text logo"></a>
                     {{ partial "nav" . }}
                 </div>
 
@@ -22,7 +22,7 @@
                     <div class="tagline">interactive, digital, performance art</div>
                 </footer>
             </div>
-            <div class="triangle-punch-out tpo_pages"></div>
+            <div class="triangle triangle-punch-out tpo_pages"></div>
 
 
             {{ block "main" . }}
