--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,16 +1,16 @@
 <nav class="header_nav">
     <img class="header_nav_divider" src="/images/slash.svg">
     <div class="header_nav_menu-item">current
-        <div class="header_nav_triangle"></div>
+        <div class="triangle triangle_drop-down"></div>
         <div class="nav_subnav">
-            <div class="subnav_menu-item">artists</div>
-            <div class="subnav_menu-item">projects</div>
+            <a href="/artists"><div class="subnav_menu-item">artists</div></a>
+            <a href="/events"><div class="subnav_menu-item">projects</div></a>
         </div>
     </div>
 
     <img class="header_nav_divider" src="/images/slash.svg">
     <div class="header_nav_menu-item">past work
-        <div class="header_nav_triangle"></div>
+        <div class="triangle triangle_drop-down"></div>
         <div class="nav_subnav">
             <div class="subnav_menu-item">artists</div>
             <div class="subnav_menu-item">projects</div>
@@ -20,7 +20,7 @@
 
     <img class="header_nav_divider" src="/images/slash.svg">
     <div class="header_nav_menu-item">support us
-        <div class="header_nav_triangle"></div>
+        <div class="triangle triangle_drop-down"></div>
         <div class="nav_subnav">
             <div class="subnav_menu-item">contribute</div>
             <div class="subnav_menu-item">volunteer</div>
@@ -30,7 +30,7 @@
 
     <img class="header_nav_divider" src="/images/slash.svg">
     <div class="header_nav_menu-item">residency
-        <div class="header_nav_triangle"></div>
+        <div class="triangle triangle_drop-down"></div>
         <div class="nav_subnav">
             <div class="subnav_menu-item">info for artists</div>
             <div class="subnav_menu-item">how to apply</div>
