--- a/assets/sass/nav.scss
+++ b/assets/sass/nav.scss
@@ -49,10 +49,7 @@
     height: 32px;
 }
 
-.header_nav_triangle {
-    width: 0;
-    height: 0;
-    border-style: solid;
+.triangle_drop-down {
     border-width: 7px 4px 0 4px;
     border-color: #aaa transparent transparent transparent;
     margin: 0 0 3px 10px;
@@ -64,16 +61,19 @@
 .nav_subnav {
     opacity: 0;
     position: absolute;
-    top: -5px;
+    top: 0;
     padding-top: 30px;
     right: -10px;
     -webkit-transition: opacity 0.2s ease-in;
     transition: opacity 0.2s ease-in;
+    z-index: 100;
+
+    &:hover {
+        opacity: 1;
+    }
+    
 }
 
-.nav_subnav:hover {
-    opacity: 1;
-}
 
 .subnav_menu-item {
     display: block;
@@ -83,14 +83,18 @@
     font-size: 15px;
     font-weight: 400;
     text-align: left;
-    background: rgba(111,111,118,0.7);
+    background: rgba(100,100,105,0.85);
     margin: 1px 0;
     padding: 6px 0 0 8px;
     color: #fff;
+
+    &:hover {
+        background: rgba(70,70,85,0.9);
+        border-bottom: solid 2px #004B80;
+        color: #fab047;
+    }
 }
 
-.subnav_menu-item:hover {
-    background: rgba(70,70,85,0.9);
-    border-bottom: solid 2px #004B80;
-    color: #fab047;
-}
+
+
+
