--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
 
                 <img class="header_image-home" src="images/FPO_preMADE_67inch_3to4.jpg">
                 <!-- <img class="header_image" src="images/FPO_superduluxe_3to4.jpg"> -->
-                <div class="triangle-punch-out"></div>
+                <div class="triangle triangle-punch-out"></div>
 
                 <div class="tagline">interactive, digital, performance art</div>
                 <div class="carousel-control">
@@ -30,7 +30,7 @@
 
             <section class="preview_list events_list">
                 <h1>Upcoming Events</h1>
-                {{range sort (where .Pages "Params.type" "events") ".Params.date" | first 3 }}
+                {{range sort (where .Site.Pages "Params.type" "events") ".Params.date" | first 3 }}
                 <!-- change 2018-01-01 to now for current date -->
                 {{ if gt .Params.date "2018-01-01"}}
                     {{ partial "event_preview" . }}
