--- a/layouts/partials/event_preview.html
+++ b/layouts/partials/event_preview.html
@@ -2,7 +2,7 @@
     <img class="events_thumbnail" src={{.Params.thumbnail}}>
     <div class="events_event-info">
 
-        <h2 class="events_event-title"><a href="#">
+        <h2 class="events_event-title"><a href="{{.URL}}">
             {{if .Params.title }}
             {{.Params.title}},
             {{end}}
@@ -11,5 +11,5 @@
         <p class="events_preview_location">{{.Params.venue}}</p>
         <p class="events_preview_address">{{.Params.address}}</p>
     </div>
-    <a class="preview_link-more" href="#">more</a>
+    <a class="preview_link-more" href="{{.URL}}">more</a>
 </section>
