--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,10 +8,10 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="/css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Cairo:400,600,700" rel="stylesheet">
     {{ $sass := resources.Get "sass/main.scss" }}
     {{ $style := $sass | resources.ToCSS }}
     <link rel="stylesheet" href="{{ $style.Permalink }}">
-    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="/css/media.css">
 </head>
