grid synced for indes, list, & single

--- a/assets/sass/previews.scss
+++ b/assets/sass/previews.scss
@@ -1,7 +1,7 @@
 /* ===== EVENT PREVIEW LIST SECTION ===== */
 
 .events_list {
-    grid-area: events;
+    grid-area: sidebar;
 }
 
 .events_preview {
