--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,9 +4,9 @@
 
     <div class="container-primary">
 
-        {{ partial "social" . }}
-
-        <div class="grid grid-single">
+        {{ partial "social"}}
+        
+        <div class="grid grid-pages">
 
             <header class="header">
                 <div class="header_nav-logo-container nav_pages"><a href="/"><img class="header_logo" src="/images/Laboratory-Logo-WHITE.png"
