--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,6 +2,7 @@
 @import 'calendar';
 @import 'previews';
 @import 'single-page';
+@import 'list-page';
 @import 'pagination';
 
 * {
@@ -57,8 +58,6 @@ a {
 
 .grid {
     display: grid;
-    grid-template-columns: 60% auto;
-
     justify-items: start;
     -webkit-box-align: start;
     -ms-flex-align: start;
@@ -72,13 +71,14 @@ a {
 }
 
 .grid-home {
+    grid-template-columns: 60% auto;
     grid-template-rows: auto;
     grid-gap: 35px;
     grid-template-areas:
-        "header events"
-        "copy events"
-        "copy calendar"
-        "copy info";
+        "header sidebar"
+        "primary sidebar"
+        "primary calendar"
+        "primary info";
 }
 
 .social-links {
@@ -172,7 +172,7 @@ a {
 /* ===== PRIMARY COPY SECTION ===== */
 
 .copy-primary {
-    grid-area: copy;
+    grid-area: primary;
     background: #F7F5F0;
     padding: 30px 45px 50px 45px;
     position: relative;
